k8s/blog/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: app
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: bazhova/blog:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
