k8s/blog/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: app
spec:
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
