k8s/blog/blog.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: app
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: bazhova/blog:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: app
spec:
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog
  namespace: istio-system
spec:
  hosts:
  - blog.akg.xyz
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: blog.app.svc.cluster.local
        port:
          number: 80
