k8s/blog/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog
  namespace: istio-system
spec:
  hosts:
  - blog.akg.xyz
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: blog.app.svc.cluster.local
        port:
          number: 80
